test/error/error.input032.zc
Unknown variable or function:pizza on line 4
